[package]
name = "dominator-bulma"
version = "0.1.0"
description = "Bulma constructs for the Dominator library"
authors = ["Michael Allwright <contact@allwright.io>"]
license = "Closed"
edition = "2021"

[dependencies]
dominator = "0.5.32"
futures-signals = "0.3.31"
strum = { version = "0.24", features = ["derive"] }
wasm-bindgen = "=0.2.84"
[dependencies.web-sys]
version = "0.3.61"
features = [
  'HtmlSelectElement',
  'Document',
  'Element',
  'Window',
]


