[package]
name = "dominator-bulma"
version = "0.1.0"
description = "Bulma constructs for the Dominator library"
authors = ["Michael Allwright <contact@allwright.io>"]
license = "MIT"
edition = "2021"

[dependencies]
dominator = "0.5.33"
futures-signals = "0.3.31"
wasm-bindgen = "=0.2.86"
[dependencies.web-sys]
version = "0.3.61"
features = [
  'HtmlButtonElement',
  'HtmlDivElement',
  'HtmlInputElement',
  'HtmlLabelElement',
  'HtmlSelectElement',  
  'HtmlSpanElement',
  'HtmlTextAreaElement',
]


